# hueblob

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  nodelet_plugins.xml  stack.xml
data/: models.yaml
include/libhueblob/: abstract-object.hh  hueblob.h  hueblob.hh  object.hh
launch/: calib_cb_detection.launch  config.launch  demo-los.launch  preproc.launch  preproc_test.launch  test-1.launch  test-2-nohueblob.launch  test-2.launch  track.launch  track2-nodelet.launch  track_test.launch
msg/: Blob.msg  BlobBox.msg  Blobs.msg  Box.msg  Box3d.msg  Count.msg  RoiStamped.msg  RotatedRect.msg  RotatedRectStamped.msg
scripts/: add_object_cli.py  display_tracking.py
src/: fake_camera_synchronizer_node.cpp  hueblob.cpp  hueblob.h  hueblob_node.cpp
src/libhueblob/: hueblob.cpp  object.cpp
src/nodelets/: monitor_nodelet.cpp  projector_nodelet.cpp  tracker_2d_nodelet.cpp  tracker_2d_nodelet.h  window_thread.cpp  window_thread.h
src/nodes/: blob2CloudProjector.cpp  hueblob_node.cpp  monitor.cpp  projector.cpp  roi2CloudProjector.cpp  show_blobs.cpp  tracker_2d.cpp
srv/: AddObject.srv  ListObject.srv  TrackObject.srv
tests/: .gitignore  object.cpp
